--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "docs",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "3",
     "jquery": "^3.4.1"
   }
 }
